--- a/styles/style.css
+++ b/styles/style.css
@@ -11,12 +11,11 @@ html {
 .page {
   display: flex;
   justify-content: center;
-  align-items: flex-end;
+  align-items: center;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
   color: #fff;
-  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
 }
@@ -60,6 +59,8 @@ ol {
   gap: 30px;
   width: 100%;
   height: 100%;
+  margin: 0 auto;
+  align-items: start;
 }
 
 .result {
@@ -110,6 +111,7 @@ ol {
   overflow-y: auto;
   height: 298px;
   margin-bottom: 30px;
+  gap: 15px;
 }
 
 .content__list {
@@ -300,6 +302,7 @@ ol {
 
 .more-button {
   width: 100%;
+  margin-top: 20px;
 }
 
 .visually-hidden {
